# financeflow

./: .env.example  .gitignore  docker-compose.yml
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 0002_add_expenses_and_payments.sql  001_init.sql
backend/src/: auth.rs  db.rs  main.rs  schema.rs
backend/src/handlers/: client_handler.rs  dashboard_handler.rs  expense_handler.rs  mod.rs  payment_handler.rs  product_handler.rs  reports_handler.rs  sale_handler.rs  suppliers_handler.rs
backend/src/models/: client.rs  expense.rs  mod.rs  payment.rs  product.rs  sale.rs  supplier.rs
backend_rust/: Cargo.toml
backend_rust/migrations/: 001_init.sql
backend_rust/src/: main.rs
backend_rust/src/handlers/: clients.rs  products.rs  reports.rs  sales.rs  suppliers.rs
backend_rust/src/models/: client.rs  product.rs  sale.rs  supplier.rs
backend_rust/src/services/: auth.rs
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
frontend/components/: Navbar.tsx
frontend/pages/: dashboard.tsx  index.tsx  login.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/clients/: page.tsx
frontend/src/components/: ClienteForm.tsx  ExpenseForm.tsx  MaskedInput.tsx  Navbar.tsx  PaymentForm.tsx  ProductForm.tsx  SaleForm.tsx  Sidebar.tsx
frontend/src/styles/: globals.css
frontend/styles/: globals.css
frontend/types/: react-input-mask.d.ts
ml_api/: Dockerfile  app.py  main.py  requirements.txt  train_model.py
ml_api/modelo/: modelo_treinado.pkl
(+17 files in other folders)
